adding config to Feed

--- a/config/li3_bot.ini
+++ b/config/li3_bot.ini
@@ -3,3 +3,6 @@ host = irc.freenode.net
 port = 6667
 nick = Li3Bot
 channels = #li3,#li3-core
+
+[feeds]
+lithium = http://rad-dev.org/lithium/timeline.rss
