Updating timeline feed URL to use lithify.me host.

--- a/config/li3_bot.ini
+++ b/config/li3_bot.ini
@@ -5,4 +5,4 @@ nick = li3_bot
 channels = #li3,#li3-core
 
 [feeds]
-lithium = http://rad-dev.org/lithium/timeline.rss
+lithium = http://dev.lithify.me/lithium/timeline.rss
