--- a/config/li3_bot.ini
+++ b/config/li3_bot.ini
@@ -2,7 +2,8 @@
 host = irc.freenode.net
 port = 6667
 nick = li3_bot
-channels = #li3,#li3-core
+; Separate multiple channels with comma.
+channels = #li3-bot
 
-[feeds]
-lithium = http://dev.lithify.me/lithium/timeline.rss
+; [feeds]
+; lithium = http://example.org/timeline.rss
