--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "unionofrad/li3_bot",
 	"type": "lithium-library",
-	"description": "An IRC bot for your Lithium application.",
+	"description": "IRC bot for li3.",
 	"keywords": ["irc", "bot", "lithium", "li3"],
 	"homepage": "https://github.com/UnionOfRAD/li3_bot",
 	"license": "BSD-3-clause",
