--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
 	"require": {
 		"php": ">=5.3",
         "composer/installers": "1.*",
-        "unionofrad/lithium": "1.0.*@RC"
+        "unionofrad/lithium": "1.0.*"
 	}
 }
